[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""
authors = ["Tom Koren <tom.koren@tensorleap.ai>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "==2.0.3"
pyyaml = "^6.0.1"
google-cloud-storage = "==2.4.0"
transformers = "==4.31.0"
tensorflow = {version = "2.12.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "2.12.0", markers = "sys_platform == 'darwin'"}
code-loader = "^1.0.132"
onnxruntime = "1.12"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
